--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/express": "^4.17.17",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jstoxml": "^3.2.7",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.31.1",
     "sequelize-typescript": "^2.1.5",
@@ -20,6 +21,7 @@
     "@swc/core": "^1.3.59",
     "@swc/jest": "^0.2.26",
     "@types/jest": "^29.5.1",
+    "@types/jstoxml": "^2.0.2",
     "@types/supertest": "^2.0.12",
     "@types/uuid": "^9.0.1",
     "jest": "^29.5.0",
